// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with different Colours 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-cMOycp bzUSzv"
  >
    Xsmall
  </span>
  <span
    className="sc-cMOycp jvVTPJ"
    color="piccolo.100"
  >
    Xsmall
  </span>
  <span
    className="sc-cMOycp bHTRuE"
    color="goten.100"
  >
    Xsmall
  </span>
</div>
`;

exports[`Label renders with different LetterCases 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-cMOycp bzUSzv"
  >
    Default
  </span>
  <span
    className="sc-cMOycp guZSav"
  >
    Lowercase
  </span>
</div>
`;

exports[`Label renders with different Sizes 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-cMOycp jXHRrL"
    size="twoxsmall"
  >
    Twoxsmall
  </span>
  <span
    className="sc-cMOycp bzUSzv"
  >
    Xsmall
  </span>
</div>
`;

exports[`Label renders with different SizesList 1`] = `
<div
  className="flex flex-col justify-around items-center w-full"
>
  <div
    className="flex justify-around items-center w-full mb-4"
  >
    <span
      className="sc-cMOycp jXHRrL"
      size="twoxsmall"
    >
      Twoxsmall
    </span>
    <span
      className="sc-cMOycp fgLBQH"
      size="twoxsmall"
    >
      <span
        className="sc-gZVZiL lkGbAt"
        size="twoxsmall"
      >
        <svg
          className="sc-iqGgem kFrdPd"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
    </span>
    <span
      className="sc-cMOycp kxFKdD"
      size="twoxsmall"
    >
      Twoxsmall
      <span
        className="sc-kjMGqw joefLP"
        size="twoxsmall"
      >
        <svg
          className="sc-jgbSNz dkSHDR"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-cMOycp iBVBMb"
      size="twoxsmall"
    >
      <span
        className="sc-gZVZiL lkGbAt"
        size="twoxsmall"
      >
        <svg
          className="sc-iqGgem kFrdPd"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
      <span
        className="sc-kjMGqw joefLP"
        size="twoxsmall"
      >
        <svg
          className="sc-jgbSNz dkSHDR"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="flex justify-around items-center w-full"
  >
    <span
      className="sc-cMOycp bzUSzv"
    >
      Xsmall
    </span>
    <span
      className="sc-cMOycp iZlglD"
    >
      <span
        className="sc-gZVZiL hFvenc"
      >
        <svg
          className="sc-iqGgem kFrdPd"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
    </span>
    <span
      className="sc-cMOycp WqjKz"
    >
      Xsmall
      <span
        className="sc-kjMGqw bJtpBK"
      >
        <svg
          className="sc-jgbSNz dkSHDR"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-cMOycp feyqqP"
    >
      <span
        className="sc-gZVZiL hFvenc"
      >
        <svg
          className="sc-iqGgem kFrdPd"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
      <span
        className="sc-kjMGqw bJtpBK"
      >
        <svg
          className="sc-jgbSNz dkSHDR"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;
